# pycorsikaio

./: .gitignore  .travis.yml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/: release-drafter.yml
.github/workflows/: ci.yml  deploy.yml
corsikaio/: __init__.py  constants.py  file.py  io.py  longitudinal.py  reader.py  utils.py  version.py
corsikaio/subblocks/: __init__.py  cherenkov_photons.py  data.py  dtypes.py  event_end.py  event_header.py  longitudinal.py  run_end.py  run_header.py
tests/: test_as_dict.py  test_file.py  test_gzip.py  test_io.py  test_longitudinal.py  test_reader.py  test_units.py  test_zstd.py
tests/resources/: cer_corsika76900_thin  corsika74100  corsika75700  corsika75700.zst  corsika757_particle  corsika76900_thin  corsika_77500_particle  corsika_77500_particle.long  corsika_77500_particle_vertical.long
