[metadata]
name = corsikaio
description = Reader for corsika binary output files using numpy
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/cta-observatory/corsikaio
author = Maximilian Linhoff
author_email = maximilian.linhoff@tu-dortmund.de
license = MIT

[options]
packages = find:
python_requires = >=3.8
install_requires =
	numpy
zip_safe = False

[options.packages.find]
exclude = corsikaio._dev_version*

[options.extras_require]
dev =
	setuptools_scm[toml]
zstd =
	zstandard
astropy = 
	astropy
tests =
	pytest
all =
	%(zstd)s
	%(tests)s


[tool:pytest]
addopts = -v

[flake8]
max-line-length=90
